--- a/index.pug
+++ b/index.pug
@@ -1,16 +1,17 @@
-mixin articulo(curso,grupo,titulo,integrantes,resumen)
+mixin articulo(curso,grupo,titulo,integrantes,tienePoster)
 	- var poster = `${curso}/grupo-${grupo}/poster.jpg`
 	- var informe = `${curso}/grupo-${grupo}/informe.pdf`
 	article
-		img(class="poster",src=poster, alt=`poster científico`)
 		.informacion
 			h3.titulo= titulo
-			h4.integrantes= integrantes
-			p.resumen= resumen
+			h4.integrantes: small= integrantes
+			if tienePoster != 'no'
+				img(class="poster",src=poster, alt=`poster científico`)
 			p.informe
 				a(href=informe) Artículo Científico
-			p.poster
-				a(href=poster) Poster Científico
+			if tienePoster != 'no'
+				p.poster
+					a(href=poster) Poster Científico
 
 <!DOCTYPE html>
 html(lang="es")
@@ -23,38 +24,44 @@ html(lang="es")
 
 		.presentacion
 			.texto
-				h1 Sentidos que perciben... Cerebreo que puede ser engañado			
+				h1 Sentidos que perciben y un cerebro que puede ser engañado			
 				h2 Colegio San José de Marcos Paz
 				p Los alumnos/as de 4to y 5to año del Colegio San José de Marcos Paz nos invitan a "desconfiar" de nuestro cerebro.
-				p Mediante distintos informes intentarán dar respuesta a ilusiones ópticas y auditivas, a la percepción del tiempo. También se interpelan sobre ¿qué es ruido blanco y para qué nos ayuda? y ¿qué es la sinestesia?.
+				p Mediante distintos informes* intentarán dar respuesta a ilusiones ópticas y auditivas, a la percepción del tiempo. También se interpelan sobre ¿qué es ruido blanco y para qué nos ayuda? y ¿qué es la sinestesia?.
+				p: small * Trabajos en proceso de corrección.
 			img(src="escudo.png", alt="")
 		
 
 		.trabajos
-			+articulo('4a',1,'Ilusión óptica "El chocolate infinito"','Emma Arias Mommeso, E A; Salpurido, S; Méndez, P; Zappala, L; Oviedo, R')
-
-			+articulo('4a',2,'Los engaños de las ilusiones opticas','Lecumberry, M; Marquez, F; Blanco, T; Buttafuoco, F; Sotarello, M')
-
 			+articulo('4a',3,'La percepción del tiempo','de Rocha, M L; Díaz, A; Moyano, J; Sanchez, M')
+			+articulo('4a',2,'Los engaños de las ilusiones opticas','Lecumberry, M; Marquez, F; Blanco, T; Buttafuoco, F; Sotarello, M','no')
+			+articulo('4a',6,'Respuestas condicionadas','Carrizo, A; Dominguez, T; Esteves, D; García, F')
+			+articulo('4b',4,'Christopher Nolan y la manipulación del sonido','Arainty, V; Gonzalez, V; Delpieri, M; Benitez Bohm, J')
+			+articulo('4b',2,'Ilusión de Craikcornsweet','Toloza, K; Ramirez, M; Dominguez, A; Ribeiro, G; Ledesma, L')
+			+articulo('4b',6,'El ser humano y las ilusiones auditivas','Gonzalez, M; Madía, V; Villaba, M')
+			+articulo('5a',1,'Los ciclos del sueño y el ruido blanco','Blanco, V; Gimenez, J; Montiel, L; Scalia, J; Crespe, J; Narvaez, M')
+			+articulo('5b',3,"El calculo numérico en la ayuda de prevención de Alzheimer",'Bendini, L; Goyeneche, V; Maiolino, V; Telechea, P; Serra, R, López, J')
+			+articulo('5b',6,'La sinestecia', 'Aguirre, A; Perez, J; Masino, M, Guarracino, E')
+			+articulo('5b',7,'Holofonía','Salaberry, F; Torga, JJ, Sierra, M')
+			
+			+articulo('4a',1,'Ilusión óptica "El chocolate infinito"','Emma Arias Mommeso, E A; Salpurido, S; Méndez, P; Zappala, L; Oviedo, R')
+		
 
-			+articulo('4a',4,'Paradoja del cuadrado perdido','Arana, A; Narváez, A; Díaz, B; Sanabria, B; Zandonadi, C; Díaz, G')
+
 
 			+articulo('4a',5,'La extraña paradoja de Shepard', 'Gallinares, L; Reccia, E; Soto, I; Soto, F')
 
-			+articulo('4a',6,'Respuestas condicionadas','Carrizo, A; Dominguez, T; Esteves, D; García, F')
-
-			+articulo('4a',7,'Ilusión de Hering', 'Mandaradoni, JP; Saravia, N')
-
-			+articulo('4b',1,'El misterio del vestido viral', 'Ibarra, C; Bejarano, N; Traba, M; Díaz, L; Schiaffi, C; Urbizu, C')
-
-			+articulo('4b',2, 'Ilusión de Craikcornsweet','Toloza, K; Ramirez, M; Dominguez, A; Ribeiro, G; Ledesma, L')
-
-			+articulo('4b',3,'Neurociencia computacional','Oviedo, L; Díaz, C')
-
-			+articulo('4b',4,'Christopher Nolan y la manipulación del sonido','Arainty, V; Gonzalez, V; Delpieri, M; Benitez Bohm, J')
-
-			+articulo('4b',5,'¿Yanny o Laurel?', 'Abt Momesso; Cahue; Hidalgo; Testtibraga; Damico; Rotela, J')
-
-			+articulo('4b',6,'El ser humano y las ilusiones auditivas','Gonzalez, M; Madía, V; Villaba, M')
-
 			+articulo('4b',7,'El efecto Shepard','Becerra, CT; Lannelongue, J; Nieto, V; Salpurido, V')
+
+			+articulo('4a',4,'Paradoja del cuadrado perdido','Arana, A; Narváez, A; Díaz, B; Sanabria, B; Zandonadi, C; Díaz, G')
+
+			+articulo('4b',1,'El misterio del vestido viral', 'Ibarra, C; Bejarano, N; Traba, M; Díaz, L; Schiaffi, C; Urbizu, C','no')
+
+
+			+articulo('4b',3,'Neurociencia computacional','Oviedo, L; Díaz, C','no')
+
+
+			+articulo('4b',5,'¿Yanny o Laurel?', 'Abt Momesso; Cahue; Hidalgo; Testtibraga; Damico; Rotela, J','no')
+
+
+			+articulo('4a',7,'Ilusión de Hering', 'Mandaradoni, JP; Saravia, N','no')
