--- a/style.css
+++ b/style.css
@@ -15,20 +15,36 @@ body h3 {
   width: 100%;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
+  align-items: center;
+  animation-name: inicioTrabajos;
+  animation-duration: 1s;
 }
 
+@keyframes inicioTrabajos {
+  0% {
+    transform: translateY(100%);
+  }
+  100% {
+    transform: translateY(0%);
+  }
+}
 article * {
   padding: 0;
   margin: 5px;
 }
 
 article img {
-  display: none;
+  display: block;
   width: 90%;
+  margin: 10px auto;
+  filter: grayscale(90%);
+  border-radius: 4px;
   transition: 0.4s;
 }
-article article:hover img {
+article:hover img {
   display: block;
+  transform: scale(1.05);
+  filter: grayscale(0%);
 }
 
 p.poster a,
@@ -50,11 +66,26 @@ p.informe a:hover {
 .presentacion {
   display: flex;
   justify-content: space-evenly;
+  animation: inicio 1s;
 }
 .presentacion .texto {
-  width: 60%;
+  text-align: justify;
+  width: 55%;
+}
+.presentacion h1,
+.presentacion h2 {
+  text-align: center;
 }
 .presentacion img {
   width: 30%;
   margin: 5%;
+}
+
+@keyframes inicio {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
