--- a/style.scss
+++ b/style.scss
@@ -33,7 +33,6 @@ body {
 }
 
 article * {
-  padding: 0;
   margin: 5px;
 }
 
@@ -61,10 +60,12 @@ p.informe a {
   margin: 5px;
   padding: 5px;
   text-align: center;
+  transition: 0.3s;
 }
 p.poster a:hover,
 p.informe a:hover {
   transform: scale(1.05);
+  color: #f7c301;
 }
 
 .presentacion {
