--- a/style.css
+++ b/style.css
@@ -41,9 +41,11 @@ article img {
   transition: 0.4s;
 }
 article:hover img {
-  display: block;
   transform: scale(1.05);
   filter: grayscale(0%);
+}
+article:hover .titulo {
+  color: #f7c301;
 }
 
 p.poster a,
