--- a/style.scss
+++ b/style.scss
@@ -45,10 +45,14 @@ article {
     border-radius: 4px;
     transition: 0.4s;
   }
-  &:hover img {
-    display: block;
-    transform: scale(1.05);
-    filter: grayscale(0%);
+  &:hover {
+    img {
+      transform: scale(1.05);
+      filter: grayscale(0%);
+    }
+    .titulo {
+      color: #f7c301;
+    }
   }
 }
 p.poster a,
