correcciones, agregue responsive design, borre un grupo

--- a/index.pug
+++ b/index.pug
@@ -27,9 +27,10 @@ html(lang="es")
 				h1 Sentidos que perciben y un cerebro que puede ser engañado			
 				h2 Colegio San José de Marcos Paz
 				p Los alumnos/as de 4to y 5to año del Colegio San José de Marcos Paz nos invitan a "desconfiar" de nuestro cerebro.
-				p Mediante distintos informes* intentarán dar respuesta a ilusiones ópticas y auditivas, a la percepción del tiempo. También se interpelan sobre ¿qué es ruido blanco y para qué nos ayuda? y ¿qué es la sinestesia?.
+				p Mediante distintos informes* intentarán dar respuesta a ilusiones ópticas y auditivas, a la percepción del tiempo. También se interpelan sobre ¿qué es el ruido blanco y para qué nos ayuda? y ¿qué es la sinestesia?.
 				p: small * Trabajos en proceso de corrección.
-			img(src="escudo.png", alt="")
+			figure
+				img(src="escudo.png", alt="")
 		
 
 		.trabajos
@@ -45,8 +46,6 @@ html(lang="es")
 			+articulo('5b',7,'Holofonía','Salaberry, F; Torga, JJ, Sierra, M')
 			
 			+articulo('4a',1,'Ilusión óptica "El chocolate infinito"','Emma Arias Mommeso, E A; Salpurido, S; Méndez, P; Zappala, L; Oviedo, R')
-		
-
 
 
 			+articulo('4a',5,'La extraña paradoja de Shepard', 'Gallinares, L; Reccia, E; Soto, I; Soto, F')
@@ -57,11 +56,6 @@ html(lang="es")
 
 			+articulo('4b',1,'El misterio del vestido viral', 'Ibarra, C; Bejarano, N; Traba, M; Díaz, L; Schiaffi, C; Urbizu, C','no')
 
-
-			+articulo('4b',3,'Neurociencia computacional','Oviedo, L; Díaz, C','no')
-
-
 			+articulo('4b',5,'¿Yanny o Laurel?', 'Abt Momesso; Cahue; Hidalgo; Testtibraga; Damico; Rotela, J','no')
-
 
 			+articulo('4a',7,'Ilusión de Hering', 'Mandaradoni, JP; Saravia, N','no')
