correccion en la animación

--- a/style.scss
+++ b/style.scss
@@ -21,14 +21,17 @@ body {
   grid-template-columns: 1fr 1fr 1fr;
   align-items: center;
   animation-name: inicioTrabajos;
-  animation-duration: 1s;
+  animation-duration: 2s;
 }
 @keyframes inicioTrabajos {
   0% {
-    transform: translateY(100%);
+    opacity: 0;
+  }
+  50% {
+    opacity: 0;
   }
   100% {
-    transform: translateY(0%);
+    opacity: 1;
   }
 }
 
