correción en el titulo de la pagina

--- a/index.pug
+++ b/index.pug
@@ -18,7 +18,7 @@ html(lang="es")
 	head
 		meta(charset="UTF-8")
 		meta(name="viewport", content="width=device-width, initial-scale=1.0")
-		title Sentidos que perciben... Cerebreo que puede ser engañado
+		title Sentidos que perciben y un cerebro que puede ser engañado	
 		link(rel="stylesheet", href="style.css")
 	body
 
